@@ -28,6 +28,7 @@ Bugs fixed:
 - 2192049 Potential memory leak in providerDrv.c:forkProvider()
 - 2189206 duplicate call CMNewObjectPath to profileProvider.c
 - 2192030 adapt to autoconf 2.63, automake 1.10
+- 2189234 provProcMax can be too low
 
 Changes in 1.3.2
 ================
