@@ -1,3 +1,9 @@
+2008-10-31 Chris Buccella  <buccella@linux.vnet.ibm.com>
+
+	* sfcBroker.c:
+	Fixed [ 2189234 ] provProcMax can be too low
+	(patch by Klaus Kampf)
+
 2008-10-30 Chris Buccella  <buccella@linux.vnet.ibm.com>
 
 	* profileProvider.c:
